--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,8 @@
     "linkedom": "^0.18.12",
     "sst": "*",
     "tiny-invariant": "^1.3.3",
-    "zod": "^4.1.8"
+    "zod": "^4.1.8",
+    "hono": "4.9.7"
   },
   "devDependencies": {
     "vitest": "^2",
