--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@mozilla/readability": "^0.6.0",
+    "drizzle-orm": "^0.44.5",
+    "hono": "4.9.7",
     "linkedom": "^0.18.12",
     "sst": "*",
     "tiny-invariant": "^1.3.3",
-    "zod": "^4.1.8",
-    "hono": "4.9.7"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "vitest": "^2",
