--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,6 +12,7 @@
     ]
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.3",
     "@mozilla/readability": "^0.6.0",
     "drizzle-orm": "^0.44.5",
     "hono": "4.9.7",
