--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hono": "4.9.7",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "@kochbuch/core": "*"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
