--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.3",
     "@mozilla/readability": "^0.6.0",
-    "better-auth": "^1.3.25",
+    "better-auth": "1.3.26",
     "drizzle-orm": "^0.44.5",
     "hono": "4.9.7",
     "linkedom": "^0.18.12",
