--- a/apps/scraper/package.json
+++ b/apps/scraper/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "server",
+  "name": "scraper",
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
     "build": "tsdown",
     "check-types": "tsc -b",
-    "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
+    "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile scraper",
     "dev": "alchemy dev",
     "deploy": "alchemy deploy",
     "destroy": "alchemy destroy"
   },
   "dependencies": {
     "hono": "^4.8.2",
-    "better-auth": "catalog:",
     "dotenv": "catalog:",
     "zod": "catalog:",
-    "@hono/zod-validator": "catalog:",
-    "@kochbuch/auth": "workspace:*",
-    "@kochbuch/db": "workspace:*"
+    "@cloudflare/puppeteer": "^1.0.4"
   },
   "devDependencies": {
     "typescript": "catalog:",
