--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
       "dotenv": "^17.2.2",
       "zod": "^4.1.11",
       "typescript": "^5.8.2",
-      "tsdown": "^0.15.5"
+      "tsdown": "^0.15.5",
+      "@hono/zod-validator": "^0.7.3"
     }
   },
   "scripts": {
