--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,13 +11,15 @@
     "destroy": "alchemy destroy"
   },
   "dependencies": {
-    "hono": "^4.8.2",
-    "better-auth": "catalog:",
-    "dotenv": "catalog:",
-    "zod": "catalog:",
     "@hono/zod-validator": "catalog:",
     "@kochbuch/auth": "workspace:*",
-    "@kochbuch/db": "workspace:*"
+    "@kochbuch/db": "workspace:*",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
+    "ai": "^5.0.76",
+    "better-auth": "catalog:",
+    "dotenv": "catalog:",
+    "hono": "^4.8.2",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "typescript": "catalog:",
