feat: use workflow instead of scraper worker + api endpoint

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,6 +11,7 @@
     "destroy": "alchemy destroy"
   },
   "dependencies": {
+    "@cloudflare/puppeteer": "^1.0.4",
     "@hono/zod-validator": "catalog:",
     "@kochbuch/auth": "workspace:*",
     "@kochbuch/db": "workspace:*",
