--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "build": "tsdown",
     "db:push": "drizzle-kit push",
-    "db:generate": "drizzle-kit generate"
+    "db:generate": "drizzle-kit generate",
+    "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.2",
@@ -24,9 +25,10 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "drizzle-orm": "^0.44.2",
     "@libsql/client": "^0.14.0",
     "dotenv": "catalog:",
+    "drizzle-orm": "catalog:",
+    "uuid": "^13.0.0",
     "zod": "catalog:"
   }
 }
