--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,10 +16,14 @@
     "@kochbuch/auth": "workspace:*",
     "@kochbuch/db": "workspace:*",
     "@openrouter/ai-sdk-provider": "^1.2.0",
+    "@paralleldrive/cuid2": "^3.1.0",
     "ai": "^5.0.76",
     "better-auth": "catalog:",
     "dotenv": "catalog:",
+    "drizzle-orm": "catalog:",
     "hono": "^4.8.2",
+    "tiny-invariant": "catalog:",
+    "ts-pattern": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
