refactor: rename to fusilli

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@cloudflare/puppeteer": "^1.0.4",
     "@hono/zod-validator": "catalog:",
-    "@kochbuch/auth": "workspace:*",
-    "@kochbuch/db": "workspace:*",
+    "@fusilli/auth": "workspace:*",
+    "@fusilli/db": "workspace:*",
     "@openrouter/ai-sdk-provider": "^1.2.0",
     "@paralleldrive/cuid2": "^3.1.0",
     "ai": "^5.0.76",
