--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,7 +30,7 @@
     "@tanstack/react-query": "^5.85.5",
     "vite-plugin-pwa": "^1.0.1",
     "better-auth": "catalog:",
-    "@kochbuch/auth": "workspace:*"
+    "@fusilli/auth": "workspace:*"
   },
   "devDependencies": {
     "@tanstack/react-router-devtools": "^1.114.27",
