--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "@fusilli/server",
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
@@ -21,7 +21,7 @@
     "better-auth": "catalog:",
     "dotenv": "catalog:",
     "drizzle-orm": "catalog:",
-    "hono": "^4.8.2",
+    "hono": "catalog:",
     "tiny-invariant": "catalog:",
     "ts-pattern": "catalog:",
     "zod": "catalog:"
