--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,27 +12,31 @@
     "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
+    "@fusilli/auth": "workspace:*",
+    "@fusilli/server": "workspace:*",
     "@hookform/resolvers": "^5.1.1",
-    "radix-ui": "^1.4.2",
-    "@tanstack/react-form": "^1.12.3",
     "@tailwindcss/vite": "^4.0.15",
+    "@tanstack/db": "^0.5.3",
+    "@tanstack/query-core": "^5.90.10",
+    "@tanstack/query-db-collection": "^1.0.2",
+    "@tanstack/react-db": "^0.1.47",
+    "@tanstack/react-form": "^1.12.3",
+    "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-router": "^1.114.25",
+    "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hono": "catalog:",
     "lucide-react": "^0.473.0",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.2.5",
-    "zod": "catalog:",
-    "@tanstack/react-query": "^5.85.5",
     "vite-plugin-pwa": "^1.0.1",
-    "better-auth": "catalog:",
-    "hono": "catalog:",
-    "@fusilli/auth": "workspace:*",
-    "@fusilli/server": "workspace:*"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@tanstack/react-router-devtools": "^1.114.27",
