--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,7 @@
     "@tanstack/query-db-collection": "^1.0.2",
     "@tanstack/react-db": "^0.1.47",
     "@tanstack/react-form": "^1.12.3",
-    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-router": "^1.114.25",
     "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
@@ -37,7 +37,8 @@
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.2.5",
     "vite-plugin-pwa": "^1.0.1",
-    "zod": "catalog:"
+    "zod": "catalog:",
+    "ts-pattern": "catalog:"
   },
   "devDependencies": {
     "@tanstack/react-router-devtools": "^1.114.27",
