--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -18,6 +18,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.21",
     "drizzle-kit": "^0.31.2",
     "tsdown": "catalog:"
   },
@@ -28,7 +29,9 @@
     "@libsql/client": "^0.14.0",
     "dotenv": "catalog:",
     "drizzle-orm": "catalog:",
+    "lodash": "^4.17.21",
     "uuid": "^13.0.0",
-    "zod": "catalog:"
+    "zod": "catalog:",
+    "tiny-invariant": "catalog:"
   }
 }
