--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,7 +38,8 @@
     "tw-animate-css": "^1.2.5",
     "vite-plugin-pwa": "^1.0.1",
     "zod": "catalog:",
-    "ts-pattern": "catalog:"
+    "ts-pattern": "catalog:",
+    "tiny-invariant": "catalog:"
   },
   "devDependencies": {
     "@tanstack/react-router-devtools": "^1.114.27",
