--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "@hono/zod-validator": "^0.7.3",
       "tiny-invariant": "^1.3.3",
       "ts-pattern": "^5.8.0",
-      "drizzle-orm": "^0.44.2",
+      "drizzle-orm": "0.44.2",
       "hono": "^4.8.2"
     }
   },
