--- a/biome.json
+++ b/biome.json
@@ -63,7 +63,8 @@
         "noUnusedTemplateLiteral": "error",
         "useNumberNamespace": "error",
         "noInferrableTypes": "error",
-        "noUselessElse": "error"
+        "noUselessElse": "error",
+        "useImportType": "error"
       }
     }
   },
